destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-rule
  namespace: front
spec:
  host: front-service.front.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: activity-rule
  namespace: activity
spec:
  host: activity-service.activity.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: project-rule
  namespace: project
spec:
  host: project-service.project.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: task-rule
  namespace: task
spec:
  host: task-service.task.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-rule
  namespace: user
spec:
  host: user-service.user.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
