virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-route
  namespace: front
spec:
  hosts:
  - "*"
  gateways:
  - front-gateway
  http:
  - route:
    - destination:
        host: front-service.front.svc.cluster.local
        port:
          number: 8080
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity-route
  namespace: activity
spec:
  hosts:
  - activity-service.activity.svc.cluster.local
  http:
  - route:
    - destination:
        host: activity-service.activity.svc.cluster.local
        port:
          number: 50051
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-route
  namespace: project
spec:
  hosts:
  - project-service.project.svc.cluster.local
  http:
  - route:
    - destination:
        host: project-service.project.svc.cluster.local
        port:
          number: 50051
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: task-route
  namespace: task
spec:
  hosts:
  - task-service.task.svc.cluster.local
  http:
  - route:
    - destination:
        host: task-service.task.svc.cluster.local
        port:
          number: 50051
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-route
  namespace: user
spec:
  hosts:
  - user-service.user.svc.cluster.local
  http:
  - route:
    - destination:
        host: user-service.user.svc.cluster.local
        port:
          number: 50051
        subset: v1
